judge deadlock